# slang

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: conan-cmake.yml
docs/: instructions.md  language.md
examples/: CMakeLists.txt  array_loop.sl  assert.sl  hello_world.sl  linked_list.sl  native_integration.cpp  native_integration.sl  print_args.sl  string_conversion.sl  structs.sl
lang/: README.md
lang/std/: std.sl
slang-language-support/: README.md  package.json
slang-language-support/syntaxes/: slang-scripting.tmLanguage.json
src/: ast.cpp  ast.h  codegen.cpp  codegen.h  commandline.cpp  commandline.h  compiler.cpp  compiler.h  emitter.cpp  emitter.h  eval.cpp  filemanager.cpp  filemanager.h  gc.cpp  gc.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  loader.cpp  loader.h  main.cpp  module.cpp  module.h  module_resolver.cpp  module_resolver.h  opcodes.cpp  opcodes.h  package.cpp  package.h  parser.cpp  parser.h  resolve.cpp  resolve.h  strings.h  token.h  type.h  typing.cpp  typing.h  utils.cpp  (+2 more)
src/archives/: archive.h  file.cpp  file.h  memory.h
src/commandline/: commandline.cpp  commandline.h  compile.cpp  disassemble.cpp  exec.cpp  format.cpp  run.cpp  runtime.cpp
src/compiler/: ast.cpp  ast.h  attribute.cpp  attribute.h  codegen.cpp  codegen.h  collect.cpp  collect.h  constant.cpp  constant.h  directive.h  emitter.cpp  emitter.h  eval.cpp  lexer.cpp  lexer.h  loader.cpp  loader.h  location.cpp  location.h  lowering.cpp  lowering.h  macro.cpp  macro.h  name_utils.h  parser.cpp  parser.h  resolve.cpp  resolve.h  sema.cpp  sema.h  token.cpp  token.h  type.h  typing.cpp  typing.h
src/compiler/ast/: ast.cpp  ast.h  builtins.cpp  builtins.h  eval.cpp  macros.cpp  node_ids.cpp  node_ids.h  node_registry.cpp  node_registry.h  resolve.cpp
src/compiler/builtins/: format.cpp  macros.h
src/compiler/cfg/: simplify.cpp  simplify.h  verify.cpp  verify.h
src/compiler/codegen/: codegen.cpp  codegen.h  type.h
src/compiler/opt/: cfg.cpp  cfg.h
src/formatter/: formatter.cpp  formatter.h
src/interpreter/: gc.cpp  gc.h  interpreter.cpp  interpreter.h  invoke.h  module_loader.cpp  module_loader.h  types.h  value.h  vector.h
src/lang/: gc.sl  std.cmod  std.sl
src/runtime/: arrays.cpp  debug.cpp  gc.cpp  math.cpp  runtime.h  strings.cpp  types.cpp  utils.cpp  utils.h
src/shared/: module.cpp  module.h  module_resolver.cpp  module_resolver.h  opcodes.cpp  opcodes.h  stack_value.h  type_class.h  type_utils.h
test/: CMakeLists.txt  run_examples.py  run_tests.py  test_array.sl  test_array_fail1.sl  test_array_fail2.sl  test_array_fail3.sl  test_ast_serialization.cpp  test_builtin_types.sl  test_cast.sl  test_cast_fail.sl  test_cfg_simplify.cpp  test_codegen.cpp  test_compile_ir.cpp  test_const_assign_fail.sl  test_const_export.sl  test_const_import.sl  test_consteval.cpp  test_conversions.sl  test_eval_subexpr.sl  test_expr_no_effect.sl  test_expressions.sl  test_filemanager.cpp  test_formatter.cpp  test_gc_interface.sl  test_import.sl  test_integer_wrap.sl  test_interpreter.cpp  test_invalid_main_signature1.sl  test_invalid_main_signature2.sl  test_lexer.cpp  test_macro_import.sl  test_macro_transitive_import.sl  test_macros.sl  test_macros_fail2.sl  test_macros_fail3.sl  test_macros_fail5.sl  test_macros_fail6.sl  test_macros_fail7.sl  test_macros_recursive.sl  (+14 more)
test/cmake/: FmtCliE2E.cmake  TestHelpers.cmake
test/example_package/: hello.sl
test/macros/: test_const.sl  test_fail1.sl  test_fail10.sl  test_fail11.sl  test_fail12.sl  test_fail2.sl  test_fail3.sl  test_fail4.sl  test_fail5.sl  test_fail6.sl  test_fail7.sl  test_fail8.sl  test_fail9.sl  test_format_fail1.sl  test_format_fail2.sl  test_format_fail3.sl  test_import.sl  test_macros.sl  test_recursion.sl  test_struct.sl  test_transitive_import.sl  test_transitive_import1.sl  test_transitive_import2.sl
vscode/slang-language-support/: CHANGELOG.md  README.md  package.json
vscode/slang-language-support/syntaxes/: slang-scripting.tmLanguage.json
